Add pom.xml for module Part01-Lesson03, add info about this module to main pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<modules>
 		<module>Part01-Lesson01</module>
 		<module>Part01-Lesson02</module>
+		<module>Part01-Lesson03</module>
 	</modules>
 
 	<properties>
