Add pom.xml for module Part01-Lesson04, add info about module to main pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>Part01-Lesson01</module>
 		<module>Part01-Lesson02</module>
 		<module>Part01-Lesson03</module>
+		<module>Part01-Lesson04</module>
 	</modules>
 
 	<properties>
