--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
-			<scope>text</scope>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
