Add module Part01-Lesson05 to maven structure.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>Part01-Lesson02</module>
 		<module>Part01-Lesson03</module>
 		<module>Part01-Lesson04</module>
+		<module>Part01-Lesson05</module>
 	</modules>
 
 	<properties>
