Add pom.xml for module Part01-Lesson06, add info about module to main pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>Part01-Lesson03</module>
 		<module>Part01-Lesson04</module>
 		<module>Part01-Lesson05</module>
+		<module>Part01-Lesson06</module>
 	</modules>
 
 	<properties>
