Add solution for Part02-Lesson01, UML for classes Teacher, Engineer, Doctor

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 		<module>Part01-Lesson04</module>
 		<module>Part01-Lesson05</module>
 		<module>Part01-Lesson06</module>
+		
+		<module>Part02-Lesson01</module>
 	</modules>
 
 	<properties>
