Add solution for Part02-Lesson03, UML for Task Tracker, add lesson pom.xml, change main pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>Part01-Lesson06</module>
 		
 		<module>Part02-Lesson01</module>
+		<module>Part02-Lesson03</module>
 	</modules>
 
 	<properties>
