Add solution for Part02-Lesson04, classes Comment, Task, TaskTracker and corresponding tests

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		
 		<module>Part02-Lesson01</module>
 		<module>Part02-Lesson03</module>
+		<module>Part02-Lesson04</module>
 	</modules>
 
 	<properties>
