Add solution for Part02-Lesson05, classes ConsoleInput, StartUI

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<module>Part02-Lesson01</module>
 		<module>Part02-Lesson03</module>
 		<module>Part02-Lesson04</module>
+		<module>Part02-Lesson05</module>
 	</modules>
 
 	<properties>
