--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 					<check>
 						<branchRate>60</branchRate>
 						<lineRate>60</lineRate>
-						<haltOnFailure>true</haltOnFailure>
+						<haltOnFailure>false</haltOnFailure>
 						<totalBranchRate>60</totalBranchRate>
 						<totalLineRate>60</totalLineRate>
 						<packageLineRate>60</packageLineRate>
