--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<module>Part02-Lesson03</module>
 		<module>Part02-Lesson04</module>
 		<module>Part02-Lesson05</module>
+		<module>Part02-Lesson06</module>
 	</modules>
 
 	<properties>
