Add solution for Part02-Lesson06, implement menu and user actions via inner classes in Tracker app

--- a/Part02-Lesson06/pom.xml
+++ b/Part02-Lesson06/pom.xml
@@ -12,4 +12,19 @@
         <artifactId>Lessons</artifactId>
         <version>1.0.0</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>Job4j</groupId>
+            <artifactId>Part02-Lesson04</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>Job4j</groupId>
+            <artifactId>Part02-Lesson05</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
