--- a/Part02-Lesson05/pom.xml
+++ b/Part02-Lesson05/pom.xml
@@ -36,7 +36,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>alnero.StartUI</mainClass>
+                                    <mainClass>alnero.innerClasses.StartUI</mainClass>
                                 </transformer>
                             </transformers>
                             <finalName>tracker</finalName>
