Add solution for Part02-Lesson07, black pawn move

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>Part02-Lesson04</module>
 		<module>Part02-Lesson05</module>
 		<module>Part02-Lesson06</module>
+		<module>Part02-Lesson07</module>
 	</modules>
 
 	<properties>
