Add solution for Part03-Lesson01, phone book based on array list

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 		<module>Part02-Lesson05</module>
 		<module>Part02-Lesson06</module>
 		<module>Part02-Lesson07</module>
+
+		<module>Part03-Lesson01</module>
 	</modules>
 
 	<properties>
