Add solution for Part03-Lesson02, convert list of users to map of users

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>Part02-Lesson07</module>
 
 		<module>Part03-Lesson01</module>
+		<module>Part03-Lesson02</module>
 	</modules>
 
 	<properties>
