--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
 		<module>Part03-Lesson01</module>
 		<module>Part03-Lesson02</module>
+		<module>Part03-Lesson03</module>
 	</modules>
 
 	<properties>
