--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>Part03-Lesson01</module>
 		<module>Part03-Lesson02</module>
 		<module>Part03-Lesson03</module>
+		<module>Part03-Lesson04</module>
 	</modules>
 
 	<properties>
@@ -107,6 +108,26 @@
 							<goal>clean</goal>
 							<goal>check</goal>
 							<goal>cobertura</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
