Add solution for Part03-Lesson05, add solution for bank transactions task

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>Part03-Lesson02</module>
 		<module>Part03-Lesson03</module>
 		<module>Part03-Lesson04</module>
+		<module>Part03-Lesson05</module>
 	</modules>
 
 	<properties>
