--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<module>Part03-Lesson03</module>
 		<module>Part03-Lesson04</module>
 		<module>Part03-Lesson05</module>
+
+		<module>Part04-Lesson01</module>
 	</modules>
 
 	<properties>
