Add solution for Part04-Lesson02, sort students according to scores

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<module>Part03-Lesson05</module>
 
 		<module>Part04-Lesson01</module>
+		<module>Part04-Lesson02</module>
 	</modules>
 
 	<properties>
