Add solution for Part05-Lesson02, simple generic array

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 		<module>Part04-Lesson03</module>
 
 		<module>Part05-Lesson01</module>
+		<module>Part05-Lesson02</module>
 	</modules>
 
 	<properties>
