Add solution for Part05-Lesson03, simple linked list

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
 		<module>Part05-Lesson01</module>
 		<module>Part05-Lesson02</module>
+		<module>Part05-Lesson03</module>
 	</modules>
 
 	<properties>
