Add solution for Part05-Lesson04, simple set

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<module>Part05-Lesson01</module>
 		<module>Part05-Lesson02</module>
 		<module>Part05-Lesson03</module>
+		<module>Part05-Lesson04</module>
 	</modules>
 
 	<properties>
