Add solution for Part05-Lesson05, create user model

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
 		<module>Part05-Lesson02</module>
 		<module>Part05-Lesson03</module>
 		<module>Part05-Lesson04</module>
+		<module>Part05-Lesson05</module>
+
 	</modules>
 
 	<properties>
