Add solution for Part05-Lesson06, simple tree, add method

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>Part05-Lesson03</module>
 		<module>Part05-Lesson04</module>
 		<module>Part05-Lesson05</module>
+		<module>Part05-Lesson06</module>
 
 	</modules>
 
