Add solution for Part05-Lesson07, user collection statistic

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<module>Part05-Lesson04</module>
 		<module>Part05-Lesson05</module>
 		<module>Part05-Lesson06</module>
+		<module>Part05-Lesson07</module>
 
 	</modules>
 
