--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<module>Part05-Lesson06</module>
 		<module>Part05-Lesson07</module>
 
+		<module>Part06-Lesson01</module>
 	</modules>
 
 	<properties>
