Add solution for Part06-Lesson02, simple socket server

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<module>Part05-Lesson07</module>
 
 		<module>Part06-Lesson01</module>
+		<module>Part06-Lesson02</module>
 	</modules>
 
 	<properties>
