--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 
 		<module>Part06-Lesson01</module>
 		<module>Part06-Lesson02</module>
+		<module>Part06-Lesson03</module>
 	</modules>
 
 	<properties>
@@ -62,6 +63,11 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 	</dependencies>
 
