Add solution for Part06-Lesson04, serialize de-serialize object

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<module>Part06-Lesson01</module>
 		<module>Part06-Lesson02</module>
 		<module>Part06-Lesson03</module>
+		<module>Part06-Lesson04</module>
 	</modules>
 
 	<properties>
