--- a/Part06-Lesson04/pom.xml
+++ b/Part06-Lesson04/pom.xml
@@ -11,4 +11,12 @@
         <artifactId>Lessons</artifactId>
         <version>1.0.0</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
 </project>
