Add solution for Part06-Lesson05, file search program

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>Part06-Lesson02</module>
 		<module>Part06-Lesson03</module>
 		<module>Part06-Lesson04</module>
+		<module>Part06-Lesson05</module>
 	</modules>
 
 	<properties>
