Add solution for Part06-Lesson05, file search program, split functions to separate classes

--- a/Part06-Lesson05/pom.xml
+++ b/Part06-Lesson05/pom.xml
@@ -32,7 +32,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>alnero.fileSearch.Finder</mainClass>
+                            <mainClass>alnero.fileSearch.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
