Add solution for Part07-Lesson01, create simple db script

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@
 		<module>Part06-Lesson03</module>
 		<module>Part06-Lesson04</module>
 		<module>Part06-Lesson05</module>
+
+		<module>Part07-Lesson01</module>
 	</modules>
 
 	<properties>
