Add solution for Part07-Lesson02, inner join sql scripts

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>Part06-Lesson05</module>
 
 		<module>Part07-Lesson01</module>
+		<module>Part07-Lesson02</module>
 	</modules>
 
 	<properties>
