Add solution for Part07-Lesson03, employees departments outer join sql scripts

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 
 		<module>Part07-Lesson01</module>
 		<module>Part07-Lesson02</module>
+		<module>Part07-Lesson03</module>
 	</modules>
 
 	<properties>
