Add solution for Part07-Lesson04, simple jdbc connection with key valey from prop file

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 		<module>Part07-Lesson01</module>
 		<module>Part07-Lesson02</module>
 		<module>Part07-Lesson03</module>
+		<module>Part07-Lesson04</module>
 	</modules>
 
 	<properties>
