Implement task tracker via sql db

--- a/Part02-Lesson04/pom.xml
+++ b/Part02-Lesson04/pom.xml
@@ -12,4 +12,12 @@
         <artifactId>Lessons</artifactId>
         <version>1.0.0</version>
     </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.16</version>
+        </dependency>
+    </dependencies>
 </project>
