Add solution for Part02-Lesson04, correct db name in travis ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ branches:
 # Postgresql
 services: postgresql
 before_script:
-  - psql -c 'CREATE DATABASE idea_db;' -U postgres
+  - psql -c 'CREATE DATABASE tracker;' -U postgres
 
 # Collect JaCoCo statistics via https://codecov.io/
 after_success:
