Add solution for Part02-Lesson04, add travis ci profile

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ branches:
 
 # Postgresql
 services: postgresql
-before_script:
+before_install:
   - psql -c 'CREATE DATABASE tracker;' -U postgres
 
 # Collect JaCoCo statistics via https://codecov.io/
