--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,21 @@
 
 	<profiles>
 		<profile>
+			<id>travis</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<db.url>jdbc:postgresql://localhost:5432/tracker</db.url>
+				<db.username>postgres</db.username>
+				<db.password></db.password>
+				<db.driver>org.postgresql.Driver</db.driver>
+			</properties>
+		</profile>
+		<profile>
 			<id>test</id>
 			<properties>
-				<db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
+				<db.url>jdbc:postgresql://localhost:5432/tracker</db.url>
 				<db.username>postgres</db.username>
 				<db.password>postgres</db.password>
 				<db.driver>org.postgresql.Driver</db.driver>
@@ -96,7 +108,7 @@
 		<profile>
 			<id>production</id>
 			<properties>
-				<db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
+				<db.url>jdbc:postgresql://localhost:5432/tracker</db.url>
 				<db.username>postgres</db.username>
 				<db.password>postgres</db.password>
 				<db.driver>org.postgresql.Driver</db.driver>
