--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<module>Part07-Lesson02</module>
 		<module>Part07-Lesson03</module>
 		<module>Part07-Lesson04</module>
+		<module>Part07-Lesson05</module>
 	</modules>
 
 	<properties>
