Add solution for Part08-Lesson01, java object size and work of gc

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,8 @@
 		<module>Part07-Lesson03</module>
 		<module>Part07-Lesson04</module>
 		<module>Part07-Lesson05</module>
+
+		<module>Part08-Lesson01</module>
 	</modules>
 
 	<properties>
