Add solution for Part08-Lesson02, soft reference dir file cache

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<module>Part07-Lesson05</module>
 
 		<module>Part08-Lesson01</module>
+		<module>Part08-Lesson02</module>
 	</modules>
 
 	<properties>
